--- a/styles.css
+++ b/styles.css
@@ -1158,7 +1158,8 @@ blockquote,
     font-style: normal; }
 
 header {
-  padding: 50px 0px;
+  padding-top: 50px;
+  padding-bottom: 140px;
   background: linear-gradient(-283deg, #0e73df, #2ce4b5);
   width: 100%; }
   header p {
@@ -1186,7 +1187,8 @@ header {
 
 /*extra large*/
 @media (min-width: 1200px) {
-  header:before {
+  /*
+    header:before {
     content: "";
     display: block;
     position: absolute;
@@ -1195,8 +1197,10 @@ header {
     height: 125px;
     background-color: white;
     right: -114px;
-    top: 189px; }
-  header:after {
+    top: 189px;
+}
+
+header:after {
     content: "";
     display: block;
     position: absolute;
@@ -1206,17 +1210,33 @@ header {
     background-color: white;
     left: -38px;
     top: 232px;
-    z-index: 1; } }
+    z-index: 1;
+}*/ }
 
 footer {
   background: #1f1740;
-  padding-top: 80px; }
+  padding-top: 80px;
+  padding-bottom: 50px; }
   footer * {
     color: white; }
+  footer a:hover {
+    color: white;
+    font-weight: bold; }
+
+#logo-footer {
+  padding-bottom: 50px; }
+
+#menu-legalmenu * {
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 7px; }
+
+#menu-legalmenu a {
+  text-decoration: underline; }
 
 .menu-item {
   font-family: "sofia_pro_black";
-  padding-top: 15px; }
+  padding-top: 5px; }
 
 .sub-menu .menu-item {
   font-family: 'sofia_pro'; }
@@ -1309,13 +1329,13 @@ button.secondary {
     background: white;
     color: #ff8b5c; }
 
-button.thirdly {
+.thirdly {
   border: solid 3px white;
   border-radius: 19px;
   background: transparent;
   color: white;
   padding: 10px 30px; }
-  button.thirdly:hover {
+  .thirdly:hover {
     background: white;
     color: #2e00df; }
 
@@ -1333,36 +1353,65 @@ ul, li {
     margin-right: auto; }
   section {
     padding-top: 60px;
-    padding-bottom: 50px;
+    /*padding-bottom: 400px;*/
     font-family: "sofia_pro_black"; }
+  svg {
+    position: absolute; }
+  .svg-white path {
+    fill: white; }
+  .svg-white #wave2 {
+    visibility: hidden; }
+  .svg-grey path {
+    fill: #f5f5f5; }
+  .svg-grey #wave1 {
+    visibility: hidden; }
+  .svg-header {
+    margin-top: -60px; }
+    .svg-header path {
+      fill: white; }
+    .svg-header #wave1 {
+      visibility: hidden; }
   .img {
     max-width: 100%; }
   #intro hr {
     height: 2px;
     opacity: 0.4;
     background: #6a7181; }
+  #impact {
+    padding-top: 150px; }
   #talent {
-    background-color: #f5f5f5; }
+    background-color: #f5f5f5;
+    padding-top: 150px; }
   #lean {
-    background-color: #f5f5f5; }
+    background-color: #f5f5f5;
+    padding-top: 150px; }
   #enjoy {
     background: linear-gradient(-283deg, #0e73df, #2ce4b5);
-    width: 100%; }
+    width: 100%;
+    padding-top: 150px;
+    padding-bottom: 50px; }
   #pre-footer {
     background-image: linear-gradient(310deg, #1f1750, #2e00df);
-    width: 100%; }
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px; }
     #pre-footer h2 {
       color: white;
       font-family: "sofia_pro_black"; }
     #pre-footer p {
       color: white;
       font-family: "sofia_pro_black";
-      font-size: 20px; }
+      font-size: 20px;
+      text-align: left; }
+      #pre-footer p span {
+        color: white;
+        font-size: 15px;
+        line-height: 15px; }
   #email-input {
     background-color: #1f1740;
     padding-top: 30px;
     padding-bottom: 30px;
-    padding-right: 100px;
+    padding-right: 130px;
     border-radius: 8px;
     box-shadow: inset 0 -1px 3px 0 #ffffff; }
   .blob-wrapper {
@@ -1370,6 +1419,15 @@ ul, li {
     height: 100%;
     width: 30vw;
     height: 30vw;
+    max-width: 400px;
+    max-height: 400px;
+    position: absolute;
+    z-index: 4; }
+  .blob-wrapper-header {
+    width: 100%;
+    height: 100%;
+    /*    width: 30vw;
+	    height: 30vw;*/
     max-width: 400px;
     max-height: 400px;
     position: absolute;
@@ -1398,14 +1456,63 @@ ul, li {
   .img-blob {
     width: 79%;
     left: -140px;
-    top: -29px; } }
+    top: -29px; }
+  #impact {
+    padding-top: 200px; }
+  #talent {
+    padding-top: 200px; }
+  #lean {
+    padding-top: 200px; }
+  #enjoy {
+    padding-top: 200px; }
+  .svg-header {
+    margin-top: -140px; }
+    .svg-header path {
+      fill: white; }
+    .svg-header #wave1 {
+      visibility: hidden; } }
 
 /*large*/
 @media (min-width: 991px) {
   .img-blob {
     position: absolute;
     width: 21%;
-    left: -80px; } }
+    left: -80px; }
+  #intro {
+    /*padding-top: 300px;*/
+    margin-bottom: -100px;
+    position: relative;
+    z-index: 100; }
+  #impact {
+    padding-top: 300px;
+    margin-bottom: -100px;
+    position: relative;
+    z-index: 100; }
+  #talent {
+    padding-top: 300px;
+    margin-bottom: -100px;
+    /*position: relative;
+	 	z-index: 100;*/ }
+  #lean {
+    padding-top: 300px;
+    /*margin-bottom: -100px;*/
+    /*position: relative;*/
+    /*z-index: 100;*/ }
+  #enjoy {
+    padding-top: 300px;
+    /*margin-bottom: -100px;*/
+    /*position: relative;*/
+    /*z-index: 100;*/ }
+  #pre-footer {
+    text-align: left; }
+  .thirdly {
+    margin-top: 120px; }
+  .svg-header {
+    margin-top: -150px; }
+    .svg-header path {
+      fill: white; }
+    .svg-header #wave1 {
+      visibility: hidden; } }
 
 /* ==========================================================================
 
